--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
         <h1>Sistema de Cadastro de Jogos</h1>
     </header>
 
+    <main>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </main>
+
     <script src="app.js"></script>
 </body>
 </html>
